Save to local storage

--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
         </div>
         <!-- complete -->
         <div class="complete" id="complete" hidden>
-        <h1 class="complete-title">Countdown Complete!</h1>
-        <h1 id="complete-info">Countdown Finished on 05-05-2020</h1>
-        <button id="complete-button">New Countdown</button>
-    </div>
+            <h1 class="complete-title"></h1>
+            <button id="complete-button">New Countdown</button>
+        </div>
     </div>
     <!-- Script -->
     <script src="script.js"></script>
